Optimize packages (Entity controllers, Mongo Classes, and Models are moved to db) Separate db methods from api methods (Controllers for DB, Routes for API) Create Route classes that work with API calls (middleware between API and DB) Add HTTP response constant methods (OK, NO_CONTENT, CREATED, NOT_FOUND, BAD_REQUEST) Change all routes to use methods from Route classes Update creation methods (Now, they don't return anything)

--- a/clubok_be/src/main/resources/public/index.html
+++ b/clubok_be/src/main/resources/public/index.html
@@ -1,3 +1,13 @@
+<!--<html>-->
+    <!--<head>-->
+    <!--</head>-->
+    <!--<link rel="stylesheet" href="assets/main.css">-->
+    <!--<body>-->
+        <!--<div id="app"></div>-->
+
+        <!--<script src="assets/main.js"></script>-->
+    <!--</body>-->
+<!--</html>-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,12 +16,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="chatControls">
-        <input id="message" placeholder="Type your message">
-        <button id="send">Send</button>
-    </div>
-    <ul id="userlist"> <!-- Built by JS --> </ul>
-    <div id="chat">    <!-- Built by JS --> </div>
-    <script src="websocketDemo.js"></script>
+<div id="chatControls">
+    <input id="message" placeholder="Type your message">
+    <button id="send">Send</button>
+</div>
+<ul id="userlist"> <!-- Built by JS --> </ul>
+<div id="chat">    <!-- Built by JS --> </div>
+<script src="websocketDemo.js"></script>
 </body>
 </html>
