--- a/clubok_be/src/main/resources/public/index.html
+++ b/clubok_be/src/main/resources/public/index.html
@@ -1,27 +1,27 @@
-<!--<html>-->
-    <!--<head>-->
-    <!--</head>-->
-    <!--<link rel="stylesheet" href="assets/main.css">-->
-    <!--<body>-->
-        <!--<div id="app"></div>-->
-
-        <!--<script src="assets/main.js"></script>-->
-    <!--</body>-->
-<!--</html>-->
-<!DOCTYPE html>
 <html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebsSockets</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div id="chatControls">
-    <input id="message" placeholder="Type your message">
-    <button id="send">Send</button>
-</div>
-<ul id="userlist"> <!-- Built by JS --> </ul>
-<div id="chat">    <!-- Built by JS --> </div>
-<script src="websocketDemo.js"></script>
-</body>
+    <head>
+    </head>
+    <link rel="stylesheet" href="assets/main.css">
+    <body>
+        <div id="app"></div>
+
+        <script src="assets/main.js"></script>
+    </body>
 </html>
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--<head>-->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <!--<title>WebsSockets</title>-->
+    <!--<link rel="stylesheet" href="style.css">-->
+<!--</head>-->
+<!--<body>-->
+<!--<div id="chatControls">-->
+    <!--<input id="message" placeholder="Type your message">-->
+    <!--<button id="send">Send</button>-->
+<!--</div>-->
+<!--<ul id="userlist"> &lt;!&ndash; Built by JS &ndash;&gt; </ul>-->
+<!--<div id="chat">    &lt;!&ndash; Built by JS &ndash;&gt; </div>-->
+<!--<script src="websocketDemo.js"></script>-->
+<!--</body>-->
+<!--</html>-->
