--- a/Design/login.html
+++ b/Design/login.html
@@ -21,6 +21,7 @@
 			
 			<div class="column">
 				<form id='login' action="" method='post'>
+					<!-- <h2 class="log-st">Log In</h2> -->
 	       		 	<input type="text" placeholder="Username" required>
 		      		<input type="password" placeholder="Password" required>
 		      		<button type='submit'>Login</button>
