--- a/clubok_be/src/main/resources/public/index.html
+++ b/clubok_be/src/main/resources/public/index.html
@@ -22,6 +22,6 @@
     <body>
         <div id="app"></div>
 
-        <script src="assets/main.js"></script>
+        <script src="assets/authorization.js"></script>
     </body>
 </html>
