--- a/Design/test.html
+++ b/Design/test.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <title>Test</title>
 
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="semantic-ui/semantic.min.css">
-    <link rel="stylesheet" href="css/post.css">
 </head>
 <body>
+
+<div class="ui large menu">
+    <div class="ui container">
+        <a href="#" class="header item">
+            <img class="logo" src="assets/images/logo.png">ClubOK</a>
+        <a class="item">Home</a>
+        <div class="right menu">
+            <div class="item">
+                <button class="negative ui button">Log Out</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="ui twelve column grid justified container">
     <div class="row">
         <div class="four wide column">
@@ -24,49 +35,22 @@
                             <div class="sub header">today, at 13:30</div>
                         </div>
                     </h2>
+                </div>
+                <div class="content">
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                     </p>
+                    <img class="ui image fluid" src="images/paris.jpg" alt="">
                 </div>
-
                 <div class="content">
                     <span class="right floated">
-                        <i class="heart outline like icon"></i>17 likes
+                        <i class="heart outline like icon"></i>
+                        17 likes
                     </span>
-                    <i class="comment icon"></i>3 comments
+                    <i class="comment icon"></i>
+                    3 comments
                 </div>
-                <div class="extra content">
-                    <div class="ui large transparent left icon input">
-                        <i class="heart outline icon"></i>
-                        <input type="text" placeholder="Add Comment...">
-                    </div>
-                </div>
-            </div>
-            <div class="ui segments">
-                <div class="ui very padded segment">
-                    <h2 class="ui header">
-                        <img src="logo/apple.jpg">
-                        <div class="content">
-                            <a href="#">Apple</a>
-                            <div class="sub header">today, at 13:30</div>
-                        </div>
-                    </h2>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type
-                        and scrambled it to make a type specimen book. It has survived not only five centuries, but also
-                        the
-                        leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
-                        1960s
-                        with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-                        desktop
-                        publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                    </p>
-                    <img class="ui fluid image" src="images/paris.jpg" alt="">
-                </div>
-                <div class="ui segment">
+                <div class="content">
                     <div class="ui comments">
                         <div class="comment">
                             <a class="avatar">
@@ -138,13 +122,139 @@
                                 </div>
                             </div>
                         </div>
-                        <form class="ui reply form">
-                            <div class="ui action fluid input">
-                                <input type="text" placeholder="Enter your comment...">
-                                <button class="ui blue submit button">Comment</button>
-                            </div>
-                        </form>
                     </div>
+                </div>
+                <div class="content">
+                    <form class="ui reply form">
+                        <div class="ui fluid transparent left icon input">
+                            <i class="pencil alternate icon"></i>
+                            <input type="text" placeholder="Enter your comment...">
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <div class="ui fluid card">
+                <div class="content">
+                    <a class="ui teal right ribbon label">Astana Ball</a>
+                    <span>
+                        <h2 class="ui header">
+                            <img src="logo/apple.jpg">
+                            <div class="content">
+                                <a href="#">Apple</a>
+                                <div class="sub header">today, at 13:30</div>
+                            </div>
+                        </h2>
+                    </span>
+
+                </div>
+                <div class="content">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                    <img class="ui image fluid" src="images/paris.jpg" alt="">
+                </div>
+                <div class="content">
+                    <div class="ui labels">
+                        <div class="ui label">
+                            <i class="map marker alternate icon"></i>
+                            Main Atrium
+                        </div>
+                        <div class="ui label">
+                            <i class="clock outline icon"></i>
+                            19:00 | Aug, 21
+                        </div>
+                    </div>
+                </div>
+                <div class="content">
+                    <span class="right floated">
+                        <i class="heart outline like icon"></i>
+                        17 likes
+                    </span>
+                    <i class="comment icon"></i>
+                    3 comments
+                </div>
+                <div class="content">
+                    <div class="ui comments">
+                        <div class="comment">
+                            <a class="avatar">
+                                <img src="/images/avatar/small/matt.jpg">
+                            </a>
+                            <div class="content">
+                                <a class="author">Matt</a>
+                                <div class="metadata">
+                                    <span class="date">Today at 5:42PM</span>
+                                </div>
+                                <div class="text">
+                                    How artistic!
+                                </div>
+                                <div class="actions">
+                                    <a class="reply">Reply</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="comment">
+                            <a class="avatar">
+                                <img src="/images/avatar/small/elliot.jpg">
+                            </a>
+                            <div class="content">
+                                <a class="author">Elliot Fu</a>
+                                <div class="metadata">
+                                    <span class="date">Yesterday at 12:30AM</span>
+                                </div>
+                                <div class="text">
+                                    <p>This has been very useful for my research. Thanks as well!</p>
+                                </div>
+                                <div class="actions">
+                                    <a class="reply">Reply</a>
+                                </div>
+                            </div>
+                            <div class="comments">
+                                <div class="comment">
+                                    <a class="avatar">
+                                        <img src="/images/avatar/small/jenny.jpg">
+                                    </a>
+                                    <div class="content">
+                                        <a class="author">Jenny Hess</a>
+                                        <div class="metadata">
+                                            <span class="date">Just now</span>
+                                        </div>
+                                        <div class="text">
+                                            Elliot you are always so right :)
+                                        </div>
+                                        <div class="actions">
+                                            <a class="reply">Reply</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="comment">
+                            <a class="avatar">
+                                <img src="/images/avatar/small/joe.jpg">
+                            </a>
+                            <div class="content">
+                                <a class="author">Joe Henderson</a>
+                                <div class="metadata">
+                                    <span class="date">5 days ago</span>
+                                </div>
+                                <div class="text">
+                                    Dude, this is awesome. Thanks so much
+                                </div>
+                                <div class="actions">
+                                    <a class="reply">Reply</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="content">
+                    <form class="ui reply form">
+                        <div class="ui fluid transparent left icon input">
+                            <i class="pencil alternate icon"></i>
+                            <input type="text" placeholder="Enter your comment...">
+                        </div>
+                    </form>
                 </div>
             </div>
 
@@ -155,6 +265,7 @@
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="semantic-ui/semantic.min.js"></script>
 </body>
 </html>
