--- a/clubok_be/src/main/resources/public/index.html
+++ b/clubok_be/src/main/resources/public/index.html
@@ -1,24 +1,7 @@
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--<head>-->
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <!--<title>WebsSockets</title>-->
-    <!--<link rel="stylesheet" href="style.css">-->
-<!--</head>-->
-<!--<body>-->
-    <!--<div id="chatControls">-->
-        <!--<input id="message" placeholder="Type your message">-->
-        <!--<button id="send">Send</button>-->
-    <!--</div>-->
-    <!--<ul id="userlist"> &lt;!&ndash; Built by JS &ndash;&gt; </ul>-->
-    <!--<div id="chat">    &lt;!&ndash; Built by JS &ndash;&gt; </div>-->
-    <!--<script src="websocketDemo.js"></script>-->
-<!--</body>-->
-<!--</html>-->
 <html>
     <head>
     </head>
-    <link rel="stylesheet" href="assets/main.css">
+    <link rel="stylesheet" href="assets/authorization.css">
     <body>
         <div id="app"></div>
 
