Unnecessary files from Design were deleted

--- a/Design/original.html
+++ b/Design/original.html
@@ -6,39 +6,81 @@
 	<!-- <link rel="stylesheet" href="semantic-ui/fonts/outline-icons.svg"/> -->
 </head>
 
-<body>
-	<div class="ui large menu">
-		<a href="#" class="header item">
-			<img class="logo" src="assets/images/logo.png">ClubOK</a>
-			<a class="item">Home</a>
-			<div class="right menu">
-				<div class="item">
-					<button class="negative ui button">Log Out</button>
+<body style="background-color: rgb(237,238,240)">
+	<div class="ui fixed large menu">
+		<div class="ui container">
+			<a href="#" class="header item">
+				<img class="logo" src="images/logo.png">ClubOK</a>
+				<div class="right menu">
+					<div class="item">
+						<button class="negative ui button">Log Out</button>
+					</div>
 				</div>
 			</div>
 		</div>
 
 
 
-		<div class="ui grid container">
+		<div class="ui grid container" style="margin-top: 20px">
 
 			<div class="four wide column">
-				<div class="ui vertical menu">
+				<div class="ui vertical menu fluid">
 					<a class="item active">Home</a>
-					<a class="item">Messages</a>
-					<a class="item">Friends</a>
+					<a class="item">Clubs</a>
+					<a class="item">About us</a>
 				</div>
-
 			</div>
 			<div class="eight wide column">
 				<div class="ui search">
 					<div class="ui icon input fluid">
-						<input class="prompt" type="text" placeholder="Search countries...">
+						<input class="prompt" type="text" placeholder="Search clubs...">
 						<i class="search icon"></i>
 					</div>
 					<div class="results"></div>
 				</div>	
-				<div class="ui huge celled aligned selection list">
+				<div class="ui huge celled list segment">
+					<div class="item">
+						<img class="ui avatar image" src="/images/avatar/small/helen.jpg">
+						<div class="content">
+							<div class="header">Helen</div>
+						</div>
+					</div>
+					<div class="item">
+						<img class="ui avatar image" src="/images/avatar/small/helen.jpg">
+						<div class="content">
+							<div class="header">Helen</div>
+						</div>
+					</div>
+					<div class="item">
+						<img class="ui avatar image" src="/images/avatar/small/helen.jpg">
+						<div class="content">
+							<div class="header">Helen</div>
+						</div>
+					</div>
+					<div class="item">
+						<img class="ui avatar image" src="/images/avatar/small/helen.jpg">
+						<div class="content">
+							<div class="header">Helen</div>
+						</div>
+					</div>
+					<div class="item">
+						<img class="ui avatar image" src="/images/avatar/small/helen.jpg">
+						<div class="content">
+							<div class="header">Helen</div>
+						</div>
+					</div>
+					<div class="item">
+						<img class="ui avatar image" src="/images/avatar/small/helen.jpg">
+						<div class="content">
+							<div class="header">Helen</div>
+						</div>
+					</div>
+					<div class="item">
+						<img class="ui avatar image" src="/images/avatar/small/helen.jpg">
+						<div class="content">
+							<div class="header">Helen</div>
+						</div>
+					</div>
 					<div class="item">
 						<img class="ui avatar image" src="/images/avatar/small/helen.jpg">
 						<div class="content">
@@ -162,53 +204,43 @@
 				</div>
 			</div>
 			<div class="four wide column">
-				<div class="ui vertical menu"  id="example1">
+				<div class="ui vertical sticky menu"  id="example1">
 					<div class="item">
-						<div class="header">Products</div>
+						<div class="header">Clubs</div>
 						<div class="menu">
-							<a class="item active">Enterprise</a>
-							<a class="item">Consumer</a>
+							<a class="item">My clubs</a>
+							<a class="item">Popular</a>
 						</div>
 					</div>
 					<div class="item">
-						<div class="header">CMS Solutions</div>
+						<div class="header">Category</div>
 						<div class="menu">
-							<a class="item">Rails</a>
-							<a class="item">Python</a>
-							<a class="item">PHP</a>
-						</div>
-					</div>
-					<div class="item">
-						<div class="header">Hosting</div>
-						<div class="menu">
-							<a class="item">Shared</a>
-							<a class="item">Dedicated</a>
-						</div>
-					</div>
-					<div class="item">
-						<div class="header">Support</div>
-						<div class="menu">
-							<a class="item">E-mail Support</a>
-							<a class="item">FAQs</a>
+							<a class="item active">All</a>
+							<a class="item">Entertaiment</a>
+							<a class="item">Sport</a>
+							<a class="item">Social</a>
+							<a class="item">Student Developmant</a>
+							<a class="item">Education</a>
 						</div>
 					</div>
 				</div>
-
 
 				<div class="ui sticky vertical menu">
+					
 					<a class="item">
-						<h4 class="ui header">Promotions</h4>
-						<p>Check out our new promotions</p>
+						<h4 class="ui header">SG Government</h4>
+						<p>Recruitment</p>
 					</a>
 					<a class="item">
-						<h4 class="ui header">Coupons</h4>
-						<p>Check out our collection of coupons</p>
+						<h4 class="ui header">Nomad</h4>
+						<p>Public debate</p>
 					</a>
 					<a class="item">
-						<h4 class="ui header">Rebates</h4>
-						<p>Visit our rebate forum for information on claiming rebates</p>
+						<h4 class="ui header">ACM Student Chapter</h4>
+						<p>HACK NU 2018!</p>
 					</a>
 				</div>
+				<div class="ui calendar" id="example15"></div>
 
 			</div>
 		</div>
