--- a/clubok_be/src/main/resources/public/feed.html
+++ b/clubok_be/src/main/resources/public/feed.html
@@ -1,9 +1,9 @@
 <html>
     <head>
     </head>
-    <link rel="stylesheet" href="assets/normalize.css">
+    <link rel="stylesheet" href="dist/normalize.css">
+    <link rel="stylesheet" href="dist/semantic.min.css"/>
     <link rel="stylesheet" href="assets/feed.css">
-    <link rel="stylesheet" href="assets/semantic.min.css"/>
     <body>
         <div id="feed"></div>
         <script src="assets/feed.js"></script>
