--- a/Design/test.html
+++ b/Design/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Feed</title>
 
     <link rel="stylesheet" href="semantic-ui/semantic.min.css">
 </head>
@@ -23,7 +23,7 @@
         <div class="ui twelve column grid justified container" style="margin-top: 20px">
             <div class="row">
                 <div class="four wide column">
-                    <div class="ui vertical menu">
+                    <div class="ui vertical menu fluid">
                     <a class="item active">Home</a>
                     <a class="item">Clubs</a>
                     <a class="item">About us</a>
@@ -280,9 +280,9 @@
                             <p>HACK NU 2018!</p>
                         </a>
                     </div>
-                    
 
-                        
+
+
                 </div>
             </div>
         </div>
