--- a/Design/login.html
+++ b/Design/login.html
@@ -1,60 +1,82 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>ClubOK - Login</title>
-		<link rel="stylesheet" href="styles/login.css"/>
-		<link rel="stylesheet" href="icons"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-	</head>
+<head>
+    <title>ClubOK - Login</title>
+    <!--<link rel="stylesheet" href="styles/login.css"/>-->
+    <link rel="stylesheet" href="semantic-ui/semantic.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-	<body style="background-color: rgb(237,238,240)">
-		<div class="topnav">
-			<button class="btn">ClubOK</button>
-			<input type="text" class="search" placeholder="Search">
-		</div>
+<body style="background-color: rgb(237,238,240)">
+<div class="topnav">
+    <button class="btn">ClubOK</button>
+    <input type="text" class="search" placeholder="Search">
+</div>
+
+<div class="ui grid container">
+    <div class="row">
+        <div class="six wide column">
+            <form class="ui form">
+                <div class="field">
+                    <label>First Name</label>
+                    <input type="text" name="first-name" placeholder="First Name">
+                </div>
+                <div class="field">
+                    <label>Last Name</label>
+                    <input type="text" name="last-name" placeholder="Last Name">
+                </div>
+                <div class="field">
+                    <div class="ui checkbox">
+                        <input type="checkbox" tabindex="0" class="hidden">
+                        <label>I agree to the Terms and Conditions</label>
+                    </div>
+                </div>
+                <button class="ui button" type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!--<div class="row">-->
+    <!--<div class="column"> &lt;!&ndash; style="background-color:lightgreen;" &ndash;&gt;-->
+        <!--<div class="image">image?</div>-->
+    <!--</div>-->
+
+    <!--<div class="column">-->
+        <!--<form id='login' action="" method='post'>-->
+            <!--&lt;!&ndash; <h2 class="log-st">Log In</h2> &ndash;&gt;-->
+            <!--<input type="text" placeholder="Username" required>-->
+            <!--<input type="password" placeholder="Password" required>-->
+            <!--<button type='submit'>Login</button>-->
+        <!--</form>-->
 
 
-		<div class="row">
- 			<div class="column"> <!-- style="background-color:lightgreen;" -->
- 				<div class="image">image?</div>
- 			</div>
-			
-			<div class="column">
-				<form id='login' action="" method='post'>
-					<!-- <h2 class="log-st">Log In</h2> -->
-	       		 	<input type="text" placeholder="Username" required>
-		      		<input type="password" placeholder="Password" required>
-		      		<button type='submit'>Login</button>
-		    	</form>
-				
+        <!--<form id='register' action="" method='post'>-->
+            <!--&lt;!&ndash; <b>Junk mail annoys you?<b> &ndash;&gt;-->
+            <!--<h2 class="reg-ques">Junk mail annoys you?</h2>-->
+            <!--<div class="reg-ans">Just, sign up!</div>-->
+            <!--<input type="text" placeholder="Username" required>-->
+            <!--<input type="email" placeholder="Email" required>-->
+            <!--<input type="password" placeholder="Password" required>-->
+            <!--<input type="password" placeholder="Re Password" required>-->
+            <!--<button type='submit'>Register</button>-->
+        <!--</form>-->
+    <!--</div>-->
 
+<!--</div>-->
 
-				<form id='register' action="" method='post'>
-					<!-- <b>Junk mail annoys you?<b> -->
-					<h2 class="reg-ques">Junk mail annoys you?</h2>
-					<div class="reg-ans">Just, sign up!</div>
-	       		 	<input type="text" placeholder="Username" required>
-				    <input type="email" placeholder="Email" required>
-				    <input type="password" placeholder="Password" required>
-				    <input type="password" placeholder="Re Password" required>
-				    <button type='submit'>Register</button>
-				</form>
-			</div>
+<hr>
+<div class="footer">
+    <div class="info-about">
+        <a href="#about">ClubOK</a>
+        2018
+    </div>
+    <div class="info-team">
+        <a href="#about">Our team</a>
+    </div>
+</div>
 
-		</div>
-
-		<hr>
-		<div class="footer">
-			<div class="info-about">
-				<a href="#about">ClubOK</a> 
-				2018
-			</div>
-			<div class="info-team">
-				<a href="#about">Our team</a> 
-			</div>
-		</div>
-	
-	</body>
+</body>
 
 </html>
 </hmtl>
