--- a/clubok_be/src/main/resources/public/index.html
+++ b/clubok_be/src/main/resources/public/index.html
@@ -2,6 +2,7 @@
     <head>
     </head>
     <link rel="stylesheet" href="assets/authorization.css">
+    <link rel="stylesheet" href="dist/semantic.min.css">
     <body>
         <div id="app"></div>
 
