Add frontend live editting

--- a/Design/original.html
+++ b/Design/original.html
@@ -10,7 +10,7 @@
 	<div class="ui fixed large menu">
 		<div class="ui container">
 			<a href="#" class="header item">
-				<img class="logo" src="images/logo.png">ClubOK</a>
+				<img class="logo" src="../clubok_be/src/main/resources/public/images/logo.png">ClubOK</a>
 				<div class="right menu">
 					<div class="item">
 						<button class="negative ui button">Log Out</button>
