--- a/clubok_be/src/main/resources/public/feed.html
+++ b/clubok_be/src/main/resources/public/feed.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>ClubOk | Welcome</title>
+    <title>ClubOk | Feed</title>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"/>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="feed"></div>
 
-    <script src="assets/authorization.js"></script>
+    <script src="assets/feed.js"></script>
 </body>
 </html>
