--- a/clubok_fe/public/index.html
+++ b/clubok_fe/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>ClubOk </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ClubOk </title>
+  <link rel="stylesheet" href="/dist/styles.css">
 </head>
 <body>
-    <div id="app"></div>
+  <div id="app"></div>
 
-    <script src="/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 </body>
 </html>
